0.10.0/APIGuide/python-api-doc/_sources/zoo.orca.learn.rst.txt
zoo.orca.learn package
======================

Subpackages
-----------

.. toctree::

    zoo.orca.learn.bigdl
    zoo.orca.learn.horovod
    zoo.orca.learn.mpi
    zoo.orca.learn.mxnet
    zoo.orca.learn.openvino
    zoo.orca.learn.optimizers
    zoo.orca.learn.pytorch
    zoo.orca.learn.tf
    zoo.orca.learn.tf2

Submodules
----------

zoo.orca.learn.base\_estimator module
-------------------------------------

.. automodule:: zoo.orca.learn.base_estimator
    :members:
    :undoc-members:
    :show-inheritance:

zoo.orca.learn.metrics module
-----------------------------

.. automodule:: zoo.orca.learn.metrics
    :members:
    :undoc-members:
    :show-inheritance:

zoo.orca.learn.ray\_estimator module
------------------------------------

.. automodule:: zoo.orca.learn.ray_estimator
    :members:
    :undoc-members:
    :show-inheritance:

zoo.orca.learn.spark\_estimator module
--------------------------------------

.. automodule:: zoo.orca.learn.spark_estimator
    :members:
    :undoc-members:
    :show-inheritance:

zoo.orca.learn.trigger module
-----------------------------

.. automodule:: zoo.orca.learn.trigger
    :members:
    :undoc-members:
    :show-inheritance:

zoo.orca.learn.utils module
---------------------------

.. automodule:: zoo.orca.learn.utils
    :members:
    :undoc-members:
    :show-inheritance:


Module contents
---------------

.. automodule:: zoo.orca.learn
    :members:
    :undoc-members:
    :show-inheritance:
